@@ -256,6 +256,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25788: fileinput.hook_encoded() now supports an "errors" argument
+  for passing to open.  Original patch by Joseph Hackman.
+
 - Issue #26634: recursive_repr() now sets __qualname__ of wrapper.  Patch by
   Xiang Zhang.
 
